--- a/Sing up/sign_up.html
+++ b/Sing up/sign_up.html
@@ -4,10 +4,86 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+ <!-- Link for Sign up StyleSheet -->
+ <link rel="stylesheet" href="./sign_up.css">
  <title>Sign up</title>
 </head>
 <body>
  
- div.progressbar
+ <!-- Multi progressbar indicator  -->
+ <div class="progressbar">
+
+ </div>
+
+ <!-- Form details -->
+ <form action="#">
+  <!-- Getting Account information -->
+  <div class="account-setup container">
+   <input type="text" name="Username" id="username" placeholder="Username" required>
+   <input type="email" name="Email" id="email" placeholder="Email" required>
+   <input type="password" name="Password" id="password" placeholder="Password" required>
+   <input type="password" name="Re-Password" id="re-password" required placeholder="Conform Password">
+
+   <div class="btn">
+    <button class="next">Next</button>
+   </div>
+  </div>
+
+  <!-- Getting Personal information  -->
+  <div class="personal-info container">
+
+   <div class="inp">
+    <span>*</span><input type="text" name="First_Name" id="first-name" placeholder="First Name" required>
+   </div>
+
+   <div class="inp">
+    <span>*</span><input type="text" name="Second_Name" id="second-name" placeholder="Second Name">
+   </div>
+   
+   <div class="inp">
+    <span>*</span><input type="number" name="Phone" id="phone" placeholder="Phone" required>
+   </div>
+
+   <div class="ug">
+    
+    <div class="inp">
+     <span>*</span><input type="text" name="Ug_course" id="ug-course" placeholder="UG Course Name" required>
+    </div>
+    
+    <div class="inp">
+     <span>*</span><input type="date" name="Year_of_uf" id="year-of-ug" required>
+    </div>
+   </div>
+
+   <div class="pg">
+    <input type="text" name="Pg_course" id="pg-course" placeholder="PG Course Name">
+    <input type="date" name="Year_of_pg" id="year-of-pg">
+   </div>
+
+   <div class="research">
+    <input type="text" name="Research" id="research" placeholder="Research Name">
+    <input type="date" name="Research-date" id="research-date">
+   </div>
+
+   
+   <div class="inp">
+    <span>*</span><input type="text" name="Designation" id="designation" required placeholder="Designation">
+   </div>
+   
+   <div class="inp">
+    <span>*</span><input type="text" name="Country_of_residence" id="country-of-residence" placeholder="Country of Residence" required>
+   </div>
+   
+   <div class="inp">
+    <span>*</span><input type="text" name="City" id="city" placeholder="City" required>
+   </div>
+
+   <!-- Submit Button  -->
+   <button type="submit">Submit</button>
+  </div>
+ </form>
+
+ 
 </body>
 </html>
