--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -18,7 +18,8 @@
  <div class="progressbar">
   <span class="first" style="
   color: white;">Account Info</span>
-  <span class="second">Personal Info</span>
+  <span class="second" style="
+  color: white;">Personal Info</span>
  </div>
 
  <!-- Form details -->
