--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -17,9 +17,9 @@
  <!-- Multi progressbar indicator  -->
  <div class="progressbar">
   <span class="first" style="
-  color: white;">Account Info</span>
+  color: white;"></span>
   <span class="second" style="
-  color: white;">Personal Info</span>
+  color: white;"></span>
  </div>
 
  <!-- Form details -->
