--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -16,10 +16,8 @@
 
  <!-- Multi progressbar indicator  -->
  <div class="progressbar">
-  <span class="first" style="
-  color: white;"></span>
-  <span class="second" style="
-  color: white;"></span>
+  <span class="first"></span>
+  <span class="second"></span>
  </div>
 
  <!-- Form details -->
