--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -24,7 +24,7 @@
  <form action="#">
   <!-- Getting Account information -->
   <div class="container" id="account-info">
-   <input type="text" name="Username" id="username" placeholder="Username" autocomplete="username" required>
+   <input type="text" name="Username" id="username" placeholder="Username" required>
    <input type="email" name="Email" id="email" placeholder="Email" required>
    <input type="password" name="Password" id="password" placeholder="Password" required>
    <input type="password" name="Re-Password" id="re-password" placeholder="Conform Password" required>
