--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -15,10 +15,10 @@
 <body>
 
  <!-- Multi progressbar indicator  -->
- <!-- <div class="progressbar">
+ <div class="progressbar">
   <span class="first"></span>
   <span class="second"></span>
- </div> -->
+ </div>
 
  <!-- Form details -->
  <form action="#">
@@ -57,7 +57,7 @@
     </div>
 
     <div class="inp">
-     <span>*</span><input type="date" name="Year_of_uf" id="year-of-ug" required>
+     <span>*</span><input type="date" name="Year_of_uf" id="year-of-ug" required placeholder="dd-mm-yyyy" pattern="####-##-##">
     </div>
    </div>
 
