--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="./Sign in/sign_in.html" class="nav-link">Sign in</a>
    </li>
    <li class="nav-item">
-    <a href="./Sing up/sign_up.html" class="nav-link">Sign Up</a>
+    <a href="./Sing up/sign_ups.html" class="nav-link">Sign Up</a>
    </li>
   </ul>
  </nav>
