--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -16,8 +16,8 @@
 
  <!-- Multi progressbar indicator  -->
  <div class="progressbar">
-  <span class="first"></span>
-  <span class="second"></span>
+  <span class="first">Account Info</span>
+  <span class="second">Personal Info</span>
  </div>
 
  <!-- Form details -->
