--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -114,6 +114,10 @@
     <span>*</span><input type="text" name="City" id="city" placeholder="City" required>
    </div>
 
+  <div class="inp">
+    <input type="text" name="Home" id="home" placeholder="Home Town" >
+  </div>
+
    <div class="btn">
     <button type="submit" id="submit">Submit</button>
    </div>
