--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -9,51 +9,71 @@
  <!-- Link for Sign up StyleSheet -->
  <link rel="stylesheet" href="./sign_up.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script>
  <title>Sign up</title>
 </head>
 
 <body>
-
- <!-- Multi progressbar indicator  -->
- <div class="progressbar">
-  <span class="first">Account Info</span>
-  <span class="second">Personal Info</span>
- </div>
-
+<!-- <i class="fa fa-times" aria-hidden="true"></i> -->
  <!-- Form details -->
  <form action="#">
   <!-- Getting Account information -->
   <div class="container" id="account-info">
-   <input type="text" name="Username" id="username" placeholder="Username" required>
-   <input type="email" name="Email" id="email" placeholder="Email" required>
-   <input type="password" name="Password" id="password" placeholder="Password" required>
-   <input type="password" name="Re-Password" id="re-password" placeholder="Conform Password" required>
+    <h1>Account Login Info</h1>
+    <div class="input-flex">
+      <i class="fas fa-user-tie" id="u"></i>
+      <input type="text" name="Username" id="username" placeholder="Username" required>
+      <i class="fa fa-exclamation" id="user-check"></i>
+    </div>
+
+    <div class="input-flex">
+      <i class="fa fa-envelope" aria-hidden="true" id="e"></i>
+      <input type="email" name="Email" id="email" placeholder="Email" required>
+      <!-- <i class="fa fa-exclamation" aria-hidden="true"></i> -->
+    </div>
+
+    <div class="input-flex">
+      <i class="fas fa-unlock-alt" id="p"></i>
+     <input type="password" name="Password" id="password" placeholder="Password" required>
+     <i class="fa fa-exclamation" id="password-check"></i>
+
+    </div>
+
+    <div class="input-flex">
+     <i class="fas fa-unlock-alt" id="rp"></i>
+     <input type="password" name="Re-Password" id="re-password" placeholder="Conform Password" required>
+      <i class="fa fa-exclamation" id="re-password-check"></i>
+    </div>
   </div>
 
   <!-- Getting Personal information  -->
   <div class="container" id="personal-info">
-
+   <h1>Personal Info</h1>
    <div class="inp">
-    <span>*</span><input type="text" name="First_Name" id="first-name" placeholder="First Name" required>
+    <input type="text" name="First_Name" id="first-name" placeholder="First Name" required>
+    <i class="fa fa-exclamation" id="first-name-check"></i>
    </div>
 
    <div class="inp">
-    <span>*</span><input type="text" name="Second_Name" id="second-name" placeholder="Second Name">
+    <input type="text" name="Second_Name" id="second-name" placeholder="Second Name">
    </div>
 
    <div class="inp">
-    <span>*</span><input type="number" name="Reg_number" id="reg-num" placeholder="Register Number">
+    <input type="number" name="Reg_number" id="reg-num" placeholder="Register Number" required>
+    <!-- <i class="fa fa-check" aria-hidden="true"></i> -->
+    <i class="fa fa-exclamation" id="reg-num-check"></i>
    </div>
 
 
    <div class="inp">
-    <span>*</span><input type="number" name="Phone" id="phone" placeholder="Phone No +91" required>
+    <input type="number" name="Phone" id="phone" placeholder="Phone No +91" required>
+    <i class="fa fa-exclamation" id="phone-check"></i>
    </div>
 
    <div class="ug">
 
     <div class="inp">
-     <span>*</span><input type="text" list="ug-name" name="Ug_course" id="ug-course" placeholder="UG Course Name" required>
+     <input type="text" list="ug-name" name="Ug_course" id="ug-course" placeholder="UG Course Name" required><i class="fa fa-exclamation" aria-hidden="true"></i>
     </div>
 
     <datalist id="ug-name">
@@ -74,12 +94,13 @@
 
 
     <div class="inp">
-     <span>*</span><input type="date" name="Year_of_uf" id="year-of-ug" required placeholder="dd-mm-yyyy" pattern="####-##-##">
+     <input min = "1950" max="2025" type="Number" name="Year_of_ug" id="year-of-ug" required placeholder="Year of Passing">
+     <i class="fa fa-exclamation" aria-hidden="true"></i>
     </div>
    </div>
 
     <div class="inp">
-      <span>*</span><input type="text" list="college-name" name="College" id="College" required placeholder="College Name">
+      <input type="text" list="college-name" name="College" id="College" required placeholder="College Name">
     </div>
 
     <datalist id="college-name">
@@ -88,17 +109,18 @@
     </datalist>
    <div class="pg">
     <input type="text" name="Pg_course" id="pg-course" placeholder="PG Course Name">
-    <input type="date" name="Year_of_pg" id="year-of-pg">
-   </div>
+    <input min="1950" max="2025" type="Number" name="Year_of_pg" id="year-of-pg" required placeholder="Year of Passing">   
+  </div>
 
    <div class="research">
     <input type="text" name="Research" id="research" placeholder="Research Name">
-    <input type="date" name="Research-date" id="research-date">
-   </div>
-
+    <input min="1950" max="2025" type="Number" name="Research" id="research-year"  placeholder="Year of Passing">
+  </div>
 
    <div class="inp">
-    <span>*</span><input type="text" name="Designation" id="designation" required placeholder="Designation">
+
+    <input type="text" name="Designation" id="designation" required placeholder="Designation">
+    <i class="fa fa-exclamation" aria-hidden="true"></i>
    </div>
 
   <div class="inp">
@@ -106,16 +128,19 @@
   </div>
 
    <div class="inp">
-    <span>*</span><input type="text" name="Country_of_residence" id="country-of-residence"
-     placeholder="Country of Residence" required>
+    <input type="text" name="Country_of_residence" id="country-of-residence"
+     placeholder="Country of Residence" required><i class="fa fa-exclamation" aria-hidden="true"></i>
+
    </div>
 
    <div class="inp">
-    <span>*</span><input type="text" name="City" id="city" placeholder="City" required>
+    <input type="text" name="City" id="city" placeholder="City" required>
+    <i class="fa fa-exclamation" aria-hidden="true"></i>
    </div>
 
   <div class="inp">
-    <input type="text" name="Home" id="home" placeholder="Home Town" >
+    <input type="text" name="Home" id="home" placeholder="Home Town" required>
+    <i class="fa fa-exclamation" aria-hidden="true"></i>  
   </div>
 
    <div class="btn">
