--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -16,33 +16,32 @@
 <body>
 <!-- <i class="fa fa-times" aria-hidden="true"></i> -->
  <!-- Form details -->
- <form action="#">
+ <form action="#" id="form">
   <!-- Getting Account information -->
   <div class="container" id="account-info">
     <h1>Account Login Info</h1>
     <div class="input-flex">
       <i class="fas fa-user-tie" id="u"></i>
       <input type="text" name="Username" id="username" placeholder="Username" required>
-      <i class="fa fa-exclamation" id="user-check"></i>
+      <i id="user-check" class = "indicator">&#33;</i>
     </div>
 
     <div class="input-flex">
       <i class="fa fa-envelope" aria-hidden="true" id="e"></i>
       <input type="email" name="Email" id="email" placeholder="Email" required>
-      <!-- <i class="fa fa-exclamation" aria-hidden="true"></i> -->
     </div>
 
     <div class="input-flex">
       <i class="fas fa-unlock-alt" id="p"></i>
      <input type="password" name="Password" id="password" placeholder="Password" required>
-     <i class="fa fa-exclamation" id="password-check"></i>
+     <i id="password-check" class="indicator">&#33;</i>
 
     </div>
 
     <div class="input-flex">
      <i class="fas fa-unlock-alt" id="rp"></i>
      <input type="password" name="Re-Password" id="re-password" placeholder="Conform Password" required>
-      <i class="fa fa-exclamation" id="re-password-check"></i>
+      <i id="re-password-check"class = "indicator">&#33;</i>
     </div>
   </div>
 
@@ -51,7 +50,7 @@
    <h1>Personal Info</h1>
    <div class="inp">
     <input type="text" name="First_Name" id="first-name" placeholder="First Name" required>
-    <i class="fa fa-exclamation" id="first-name-check"></i>
+    <i id="first-name-check"class = "indicator">&#33;</i>
    </div>
 
    <div class="inp">
@@ -61,19 +60,28 @@
    <div class="inp">
     <input type="number" name="Reg_number" id="reg-num" placeholder="Register Number" required>
     <!-- <i class="fa fa-check" aria-hidden="true"></i> -->
-    <i class="fa fa-exclamation" id="reg-num-check"></i>
+    <i id="reg-num-check"class = "indicator">&#33;</i>
    </div>
 
 
    <div class="inp">
     <input type="number" name="Phone" id="phone" placeholder="Phone No +91" required>
-    <i class="fa fa-exclamation" id="phone-check"></i>
+    <i id="phone-check"class = "indicator">&#33;</i>
    </div>
 
-   <div class="ug">
+  <div class="inp">
+    <input type="text" list="college-name" name="College" id="ug-college-name" required placeholder="College Name">
+    <i id="ug-college-name-check" class="indicator">&#33;</i>
+  </div>
 
+  <datalist id="college-name">
+    <option value="University College of Engineering(BIT campus)"></option>
+    <option value="Anna University(CEG campus)"></option>
+  </datalist>
+
+   <div class="ug">
     <div class="inp">
-     <input type="text" list="ug-name" name="Ug_course" id="ug-course" placeholder="UG Course Name" required><i class="fa fa-exclamation" aria-hidden="true"></i>
+     <input type="text" list="ug-name" name="Ug_course" id="ug-course" placeholder="UG Course Name" required><i id="ug-course-check"class = "indicator">&#33;</i>
     </div>
 
     <datalist id="ug-name">
@@ -94,23 +102,31 @@
 
 
     <div class="inp">
-     <input min = "1950" max="2025" type="Number" name="Year_of_ug" id="year-of-ug" required placeholder="Year of Passing">
-     <i class="fa fa-exclamation" aria-hidden="true"></i>
+     <input min = "1950" max="2025" type="Number" name="Year_of_ug" id="year-of-ug"  placeholder="Year of Passing">
+     <i id="year-of-ug-check"class = "indicator">&#33;</i>
     </div>
    </div>
 
-    <div class="inp">
-      <input type="text" list="college-name" name="College" id="College" required placeholder="College Name">
-    </div>
-
-    <datalist id="college-name">
-      <option value="University College of Engineering(BIT campus)"></option>
-      <option value="Anna University(CEG campus)"></option>
-    </datalist>
    <div class="pg">
-    <input type="text" name="Pg_course" id="pg-course" placeholder="PG Course Name">
-    <input min="1950" max="2025" type="Number" name="Year_of_pg" id="year-of-pg" required placeholder="Year of Passing">   
+    <input type="text" name="Pg_course" id="pg-course" placeholder="PG Course Name" list="pg-name">
+    <input min="1950" max="2025" type="Number" name="Year_of_pg" id="year-of-pg"  placeholder="Year of Passing">   
   </div>
+
+  <datalist id="pg-name">
+    <option value="M.E.Computer Science And Engineering"></option>
+    <option value="M.E.Civil Engineering"></option>
+    <option value="M.E.Electrical And Electronic Engineering"></option>
+    <option value="M.E.Mechanical Engineering"></option>
+    <option value="M.E.Information Technology"></option>
+    <option value="M.E.Aeronautical Engineering"></option>
+    <option value="M.E.Electronics and Communication Engineering"></option>
+    <option value="M.E.Electronics and Instrumentation Engineering"></option>
+    <option value="M.E.Mechatronics Engineering"></option>
+    <option value="M.E.Automobile Engineering"></option>
+    <option value="M.E.Chemical Engineering"></option>
+    <option value="M.E.Biotechnology"></option>
+    <option value="M.E.Biomedical Engineering"></option>
+  </datalist>
 
    <div class="research">
     <input type="text" name="Research" id="research" placeholder="Research Name">
@@ -120,7 +136,7 @@
    <div class="inp">
 
     <input type="text" name="Designation" id="designation" required placeholder="Designation">
-    <i class="fa fa-exclamation" aria-hidden="true"></i>
+    <i id="designation-check"class = "indicator">&#33;</i>
    </div>
 
   <div class="inp">
@@ -129,22 +145,22 @@
 
    <div class="inp">
     <input type="text" name="Country_of_residence" id="country-of-residence"
-     placeholder="Country of Residence" required><i class="fa fa-exclamation" aria-hidden="true"></i>
+     placeholder="Country of Residence" required><i id="country-of-residence-check"></i>
 
    </div>
 
    <div class="inp">
     <input type="text" name="City" id="city" placeholder="City" required>
-    <i class="fa fa-exclamation" aria-hidden="true"></i>
+    <i id="city-check"class = "indicator">&#33;</i>
    </div>
 
   <div class="inp">
-    <input type="text" name="Home" id="home" placeholder="Home Town" required>
-    <i class="fa fa-exclamation" aria-hidden="true"></i>  
+    <input type="text" name="Home" id="home-town" placeholder="Home Town" required>
+    <i id="home-town-check"class = "indicator">&#33;</i>  
   </div>
 
    <div class="btn">
-    <button type="submit" id="submit">Submit</button>
+    <button type="submit">Submit</button>
    </div>
   </div>
  </form>
