Add skill checkboxes

--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -9,7 +9,7 @@
  <!-- Link for Sign up StyleSheet -->
  <link rel="stylesheet" href="./sign_up.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
- <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script>
+ <!-- <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script> -->
  <title>Sign up</title>
 </head>
 
@@ -157,6 +157,37 @@
   <div class="inp">
     <input type="text" name="Home" id="home-town" placeholder="Home Town" required>
     <i id="home-town-check"class = "indicator">&#33;</i>  
+  </div>
+
+  <div class="skills">
+    <h3>Select your skills : </h3>
+
+    <div class="skill-select">
+      <input type="checkbox" name="games" id="indoor-games" value="Indoor Games">
+      <label for="indoor-games">Football</label>
+    </div>
+
+    <div class="skill-select">
+      <input type="checkbox" name="games" id="volley-ball" value="Indoor Games">
+      <label for="volley-ball">Volley Ball</label>
+    </div>
+
+    <div class="skill-select">
+      <input type="checkbox" name="games" id="cricket" value="Indoor Games">
+      <label for="cricket">Cricket</label>
+    </div>
+
+    <div class="skill-select">
+      <input type="checkbox" name="games" id="hockey" value="Indoor Games">
+      <label for="hockey">Hockey</label>
+    </div>
+
+    <div class="skill-select">
+      <input type="checkbox" name="games" id="others" value="others">
+      <label for="indoor-games">Others</label>
+      <textarea name="Other_skills" id="other-skills" cols="30" rows="10"></textarea>
+    </div>
+
   </div>
 
    <div class="btn">
