--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -30,7 +30,7 @@
   </div>
 
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, quidem qui iure aliquam tempora praesentium mollitia possimus.
-   <a href="#" class="sign-up">Sign up</a>
+   <a href="/Sing up/Sign_ups.html" class="sign-up">Sign up</a>
   </p>
  </div>
 
