Fixed little bug

--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -146,7 +146,7 @@
    <div class="inp">
     <input type="text" name="Country_of_residence" id="country-of-residence"
      placeholder="Country of Residence" required><i id="country-of-residence-check"></i>
-
+  <i id="designation-check" class="indicator">&#33;</i>
    </div>
 
    <div class="inp">
