Successfully added home page

--- a/demo.html
+++ b/demo.html
@@ -7,28 +7,23 @@
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <title>Demo</title>
  <link rel="stylesheet" href="demo.css">
+  <!-- jQuery -->
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  
+  <!-- Fotorama -->
+  <link href="/Assets/plugin/fotorama-4.6.2/fotorama.css" rel="stylesheet">
+  <script src="/Assets/plugin/fotorama-4.6.2/fotorama.js"></script>
+
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
-  <!-- Multi progressbar indicator  -->
-  <div class="progressbar">
-   <span class="first"></span>
-   <span class="second"></span>
-   <!-- <span class="split">2</span> --> 
-   <!-- <span><hr class="first"><hr class="second"></span> -->
-  </div>
-  <button type="button" id="btn-1">click</button>
-  <button type="button" id="btn-2">click</button>
-
-  <p>paragraph</p>
-
-  <script>
-   $('#btn-1').on('click', function () {
-    $('.first').toggleClass('fill-1');
-   });
-   $('#btn-2').on('click', function () {
-     $('.second').toggleClass('fill-2');
-    });
-  </script>
+<!-- Fotorama -->
+<div class="fotorama" data-width="700" data-ratio="700/467" data-max-width="100%">
+  <img src="/Assets/img/Alumni/photo-6.jpeg">
+  <img src="/Assets/img/Alumni/photo-5.jpeg">
+  <img src="/Assets/img/Alumni/photo-4.jpeg">
+  <img src="/Assets/img/Alumni/photo-3.jpeg">
+  <img src="/Assets/img/Alumni/photo-2.jpeg">
+</div>
 </body>
 </html>
