--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -9,10 +9,63 @@
  <!-- Link section  -->
  <link rel="stylesheet" href="./sign_in.css">
  <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script>
+
+  <!-- Link for Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
+ <!-- Navbar  -->
+ <nav class="navbar navbar-inverse navbar-expand-lg">
+  <div class="container-fluid">
+   <!-- Toggle button  -->
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#links">
+    <i class="fa fa-bars" aria-hidden="true"></i>
+   </button>
+ 
+   <!-- Brand  -->
+   <div class="navbar-header">
+    <a href="#">
+     <img src="/Assets/img/logo_of_goa.png" alt="Goa logo" class="navbar-brand">
+     <h2 class="text-dark navbar-brand pt-3">University college of GOA</h2>
+    </a>
+   </div>
+ 
+   <!-- Links -->
+   <div class="navbar-collapse collapse" id="links">
+    <ul class="nav navbar-nav pl-5">
+     <li class=" nav-item">
+      <a href="/index.html" class="nav-link active border-2">Home</a>
+     </li>
+ 
+     <li class=" nav-item">
+      <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>Directorate Login</a>
+     </li>
+ 
+     <li class=" nav-item">
+      <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>College Login</a>
+     </li>
+ 
+     <li class=" nav-item">
+      <a href="/Sign in/sign_in.html" class="nav-link"><span class="fa fa-sign-in"></span>Alumni Login</a>
+     </li>
+ 
+     <li class=" nav-item">
+      <a href="#" class="nav-link nav-button text-white " type="button">Events</a>
+     </li>
+    </ul>
+   </div>
+  </div>
+ </nav>
+
  <!-- Container of Login  -->
- <div class="container">
+ <div class="cont">
   <h3>Login to your account</h3>
   <div class="username">
    <i class="fas fa-user-tie" id="user"></i>
@@ -26,7 +79,7 @@
  
   <div class="btn">
    <button type="button">LOG IN</button>
-   <a href="#">Forgotten password?</a>
+   <a href="#" class="forgotten-pass">Forgotten password?</a>
   </div>
 
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, quidem qui iure aliquam tempora praesentium mollitia possimus.
