--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -26,7 +26,7 @@
   <div class="container-fluid">
    <!-- Toggle button  -->
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#links">
-    <i class="fa fa-bars" aria-hidden="true">&times;</i>
+    <i class="fa fa-bars" aria-hidden="true">;</i>
    </button>
  
    <!-- Brand  -->
@@ -57,7 +57,7 @@
      </li>
  
      <li class=" nav-item">
-      <a href="#" class="nav-link nav-button text-white " type="button">Events</a>
+      <a href="#" class="nav-link bg-danger text-white">Events</a>
      </li>
     </ul>
    </div>
