--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -26,7 +26,7 @@
   <div class="container-fluid">
    <!-- Toggle button  -->
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#links">
-    <i class="fa fa-bars" aria-hidden="true">;</i>
+    <i class="fa fa-bars" aria-hidden="true"></i>
    </button>
  
    <!-- Brand  -->
