--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -41,7 +41,7 @@
    <div class="navbar-collapse collapse" id="links">
     <ul class="nav navbar-nav pl-5">
      <li class=" nav-item">
-      <a href="/index.html" class="nav-link active border-2">Home</a>
+      <a href="/index.html" class="nav-link active border-2 pl-2">Home</a>
      </li>
  
      <li class=" nav-item">
@@ -57,7 +57,7 @@
      </li>
  
      <li class=" nav-item">
-      <a href="#" class="nav-link bg-danger text-white">Events</a>
+      <a href="#" class="nav-link bg-danger text-white pl-2">Events</a>
      </li>
     </ul>
    </div>
