Add footer section in home and sign in page

--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -90,4 +90,7 @@
  <!-- Link for js -->
 <script src="./sign_in.js"></script>
 </body>
+<footer class="text-center pt-2 text-secondary">
+  <p>Copy rights reserved &copy; 2019 by Aubitalumni.com</p>
+</footer>
 </html>
