--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
 </div>
 
 </body>
+
+<footer class="text-center pt-2 text-secondary">
+  <p>Copy rights reserved &copy; 2019 by Aubitalumni.com</p>
+</footer>
 </html>
 
  <!-- Link for js -->
