--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -9,7 +9,7 @@
  <!-- Link for Sign up StyleSheet -->
  <link rel="stylesheet" href="./sign_up.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
- <!-- <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script> -->
+ <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script>
  <title>Sign up</title>
 </head>
 
