--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -5,20 +5,70 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!-- Link for Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
  <!-- Link for Sign up StyleSheet -->
  <link rel="stylesheet" href="./sign_up.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script>
+ 
  <title>Sign up</title>
 </head>
 
 <body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-inverse navbar-expand-lg">
+    <div class="container-fluid">
+      <!-- Toggle button  -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#links" >
+        <i class="fa fa-bars"></i>
+      </button>
+  
+      <!-- Brand  -->
+      <div class="navbar-header">
+        <a href="/index.html">
+          <img src="/Assets/img/logo_of_goa.png" alt="Goa logo" class="navbar-brand">
+          <h2 class="text-dark navbar-brand pt-3">University college of GOA</h2>
+        </a>
+      </div>
+  
+      <!-- Links -->
+      <div class="navbar-collapse collapse" id="links">
+        <ul class="nav navbar-nav pl-5">
+          <li class=" nav-item">
+            <a href="/index.html" class="nav-link active border-2 pl-2">Home</a>
+          </li>
+  
+          <li class=" nav-item">
+            <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>Directorate Login</a>
+          </li>
+  
+          <li class=" nav-item">
+            <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>College Login</a>
+          </li>
+  
+          <li class=" nav-item">
+            <a href="/Sign in/sign_in.html" class="nav-link"><span class="fa fa-sign-in"></span>Alumni Login</a>
+          </li>
+  
+          <li class=" nav-item">
+            <a href="#" class="nav-link bg-danger text-white pl-2">Events</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <!-- <i class="fa fa-times" aria-hidden="true"></i> -->
  <!-- Form details -->
  <form action="#" id="form">
   <!-- Getting Account information -->
-  <div class="container" id="account-info">
+  <div class="cont" id="account-info">
     <h1>Account Login Info</h1>
     <div class="input-flex">
       <i class="fas fa-user-tie" id="u"></i>
@@ -46,7 +96,7 @@
   </div>
 
   <!-- Getting Personal information  -->
-  <div class="container" id="personal-info">
+  <div class="cont" id="personal-info">
    <h1>Personal Info</h1>
    <div class="inp">
     <input type="text" name="First_Name" id="first-name" placeholder="First Name" required>
@@ -198,5 +248,9 @@
 
  <script src="./sign_up.js"></script>
 </body>
+
+<footer class="text-center pt-5 text-secondary">
+  <p>Copy rights reserved &copy; 2019 by Aubitalumni.com</p>
+</footer>
 
 </html>
