--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -52,9 +52,19 @@
       <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>College Login</a>
      </li>
  
-     <li class=" nav-item">
-      <a href="/Sign in/sign_in.html" class="nav-link"><span class="fa fa-sign-in"></span>Alumni Login</a>
-     </li>
+      <li class="nav-item" id="drop">
+        <div class="dropdown">
+          <a href="#" class="nav-link" data-toggle="dropdown">
+            <span class="fa fa-caret-down"></span>
+            Alumni Login
+          </a>
+      
+          <div class="dropdown-menu">
+            <a href="/Sign in/sign_in.html" class="dropdown-item">Sign_in</a>
+            <a href="/Sing up/Sign_ups.html" class="dropdown-item">Sign_up</a>
+          </div>
+        </div>
+      </li>
  
      <li class=" nav-item">
       <a href="#" class="nav-link bg-danger text-white pl-2">Events</a>
