--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
     </a>
    </li>
 
-   <li class=" nav-item">
-    <a href="/Sign in/sign_in.html" class="nav-link">
-      <span class="fa fa-sign-in"></span>
-      Alumni Login
-    </a>
+   <li class="nav-item" id="drop">
+     <div class="dropdown">
+      <a href="#" class="nav-link" data-toggle="dropdown">
+        <span class="fa fa-caret-down"></span>
+        Alumni Login
+      </a>
+
+      <div class="dropdown-menu">
+        <a href="/Sign in/sign_in.html" class="dropdown-item">Sign_in</a>
+        <a href="/Sing up/Sign_ups.html" class="dropdown-item">Sign_up</a>
+      </div>
+     </div>
    </li>
 
    <li class=" nav-item">
