Change bg white to sign up page

--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -17,7 +17,7 @@
  <link rel="stylesheet" href="./sign_up.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  <script src="https://kit.fontawesome.com/e2169f0192.js" crossorigin="anonymous"></script>
- 
+
  <title>Sign up</title>
 </head>
 
@@ -29,7 +29,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#links" >
         <i class="fa fa-bars"></i>
       </button>
-  
+
       <!-- Brand  -->
       <div class="navbar-header">
         <a href="/index.html">
@@ -37,36 +37,36 @@
           <h2 class="text-dark navbar-brand pt-3">University college of GOA</h2>
         </a>
       </div>
-  
+
       <!-- Links -->
       <div class="navbar-collapse collapse" id="links">
         <ul class="nav navbar-nav pl-5">
           <li class=" nav-item">
             <a href="/index.html" class="nav-link active border-2 pl-2">Home</a>
           </li>
-  
+
           <li class=" nav-item">
             <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>Directorate Login</a>
           </li>
-  
+
           <li class=" nav-item">
             <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>College Login</a>
           </li>
-      
+
           <li class="nav-item" id="drop">
             <div class="dropdown">
               <a href="#" class="nav-link" data-toggle="dropdown">
                 <span class="fa fa-caret-down"></span>
                 Alumni Login
               </a>
-          
+
               <div class="dropdown-menu">
                 <a href="/Sign in/sign_in.html" class="dropdown-item">Sign_in</a>
                 <a href="/Sing up/Sign_ups.html" class="dropdown-item">Sign_up</a>
               </div>
             </div>
           </li>
-  
+
           <li class=" nav-item">
             <a href="#" class="nav-link bg-danger text-white pl-2">Events</a>
           </li>
@@ -169,7 +169,7 @@
 
    <div class="pg">
     <input type="text" name="Pg_course" id="pg-course" placeholder="PG Course Name" list="pg-name">
-    <input min="1950" max="2025" type="Number" name="Year_of_pg" id="year-of-pg"  placeholder="Year of Passing">   
+    <input min="1950" max="2025" type="Number" name="Year_of_pg" id="year-of-pg"  placeholder="Year of Passing">
   </div>
 
   <datalist id="pg-name">
@@ -204,9 +204,8 @@
   </div>
 
    <div class="inp">
-    <input type="text" name="Country_of_residence" id="country-of-residence"
-     placeholder="Country of Residence" required><i id="country-of-residence-check"></i>
-  <i id="designation-check" class="indicator">&#33;</i>
+    <input type="text" name="Country_of_residence" id="country-of-residence" placeholder="Country of Residence" required>
+    <i id="country-of-residence-check" class="indicator">&#33;</i>
    </div>
 
    <div class="inp">
@@ -216,7 +215,7 @@
 
   <div class="inp">
     <input type="text" name="Home" id="home-town" placeholder="Home Town" required>
-    <i id="home-town-check"class = "indicator">&#33;</i>  
+    <i id="home-town-check"class = "indicator">&#33;</i>
   </div>
 
   <div class="skills">
