work completed! Hurray

--- a/Sign in/sign_in.html
+++ b/Sign in/sign_in.html
@@ -45,12 +45,22 @@
      </li>
  
      <li class=" nav-item">
-      <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>Directorate Login</a>
+      <a href="/Directorate Login/Sign in/sign_in.html" class="nav-link"><span class="fa fa-sign-in"></span>Directorate Login</a>
      </li>
  
-     <li class=" nav-item">
-      <a href="#" class="nav-link"><span class="fa fa-sign-in"></span>College Login</a>
-     </li>
+      <li class="nav-item" id="drop">
+        <div class="dropdown">
+          <a href="#" class="nav-link" data-toggle="dropdown">
+            <span class="fa fa-caret-down"></span>
+            College Login
+          </a>
+      
+          <div class="dropdown-menu">
+            <a href="/College Login/Sign in/sign_in.html" class="dropdown-item">Sign_in</a>
+            <a href="/College Login/Sing up/Sign_ups.html" class="dropdown-item">Sign_up</a>
+          </div>
+        </div>
+      </li>
  
       <li class="nav-item" id="drop">
         <div class="dropdown">
@@ -67,7 +77,7 @@
       </li>
  
      <li class=" nav-item">
-      <a href="#" class="nav-link bg-danger text-white pl-2">Events</a>
+      <a href="/TheEventBootstrapTemplate/index.html" class="nav-link bg-danger text-white pl-2">Events</a>
      </li>
     </ul>
    </div>
