--- a/index.html
+++ b/index.html
@@ -44,28 +44,35 @@
  <div class="navbar-collapse collapse" id="links">
   <ul class="nav navbar-nav pl-5">
    <li class=" nav-item">
-    <a href="#" class="nav-link active">Home</a>
+    <a href="/index.html" class="nav-link active">Home</a>
    </li>
 
    <li class=" nav-item">
-    <a href="#" class="nav-link">
+    <a href="/Directorate Login/Sign in/sign_in.html" class="nav-link">
       <span class = "fa fa-sign-in"></span>
       Directorate Login
     </a>
    </li>
 
-   <li class=" nav-item">
-    <a href="#" class="nav-link">
-      <span class="fa fa-sign-in"></span>
-      College Login
-    </a>
-   </li>
+  <li class="nav-item" id="drop">
+    <div class="dropdown">
+      <a href="#" class="nav-link" data-toggle="dropdown">
+        <span class="fa fa-caret-down"></span>
+        College
+      </a>
+  
+      <div class="dropdown-menu">
+        <a href="/College Login/Sign in/sign_in.html" class="dropdown-item">Sign_in</a>
+        <a href="/College Login/Sing up/Sign_ups.html" class = "dropdown-item">Sign_up</a>
+      </div>
+    </div>
+  </li>
 
    <li class="nav-item" id="drop">
      <div class="dropdown">
       <a href="#" class="nav-link" data-toggle="dropdown">
         <span class="fa fa-caret-down"></span>
-        Alumni Login
+        Alumni
       </a>
 
       <div class="dropdown-menu">
@@ -76,7 +83,7 @@
    </li>
 
    <li class=" nav-item">
-    <a href="#" class="nav-link nav-button text-white " type="button">Events</a>
+    <a href="/TheEventBootstrapTemplate/index.html" class="nav-link nav-button text-white " type="button">Events</a>
    </li>
   </ul>
  </div>
