--- a/TheEventBootstrapTemplate/index.html
+++ b/TheEventBootstrapTemplate/index.html
@@ -119,12 +119,12 @@
  <!-- carousel container  -->
  <div class="carousel">
   <div class="carousel-inner">
-   <img src="/Assets/img/Alumni/logo.jpg" alt="Banner" style="height:100vh;width:100vw;">
+   <img src="/Assets/img/Alumni/photo-1.jpeg" alt="Banner">
   </div>
 
   <div class="carousel-caption">
-   <h2 class="">THE ANNUAL <span class="text-danger">MARKETING</span> CONFERENCE</h2>
-   <p>10-12 December, Downtown Conference Center, New York</p>
+   <!-- <h2 class="">THE ANNUAL <span class="text-danger">MARKETING</span> CONFERENCE</h2>
+   <p>10-12 December, Downtown Conference Center, New York</p> -->
 
    <button class="btn btn-danger text-white rounded-pill"  id = "about-button">About The Event</button>
   </div>
