--- a/TheEventBootstrapTemplate/index.html
+++ b/TheEventBootstrapTemplate/index.html
@@ -367,7 +367,7 @@
 
   <!-- Description  -->
  <div class="col-sm-12 col-md-12 col-lg-12 conference-description">
-  <h3>Downtown Conference Center, New York</h3>
+  <h3>Downtown Conference Center, Goa India</h3>
   <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem
    corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
  </div>
