--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -86,7 +86,7 @@
   </nav>
 <!-- <i class="fa fa-times" aria-hidden="true"></i> -->
  <!-- Form details -->
- <form action="#" id="form">
+ <div action="#" id="form">
   <!-- Getting Account information -->
   <div class="cont" id="account-info">
     <h1>Account Login Info</h1>
@@ -258,10 +258,9 @@
     </div>
 
   </div>
+  <button type="submit" class = "btn btn-danger">Submit</button>
 
-   <div class="btn">
-    <button type="submit">Submit</button>
-   </div>
+</div>
   </div>
  </form>
 
