--- a/Sing up/Sign_ups.html
+++ b/Sing up/Sign_ups.html
@@ -232,27 +232,27 @@
     <h3>Select your skills : </h3>
 
     <div class="skill-select">
-      <input type="checkbox" name="games" id="indoor-games" value="Indoor Games">
+      <input type="checkbox" name="Indoor"  value="Indoor Games">
       <label for="indoor-games">Football</label>
     </div>
 
     <div class="skill-select">
-      <input type="checkbox" name="games" id="volley-ball" value="Indoor Games">
+      <input type="checkbox" name="Volley"  value="Indoor Games">
       <label for="volley-ball">Volley Ball</label>
     </div>
 
     <div class="skill-select">
-      <input type="checkbox" name="games" id="cricket" value="Indoor Games">
+      <input type="checkbox" name="Circket"  value="Indoor Games">
       <label for="cricket">Cricket</label>
     </div>
 
     <div class="skill-select">
-      <input type="checkbox" name="games" id="hockey" value="Indoor Games">
+      <input type="checkbox" name="Hockey"  value="Indoor Games">
       <label for="hockey">Hockey</label>
     </div>
 
     <div class="skill-select">
-      <input type="checkbox" name="games" id="others" value="others">
+      <input type="checkbox" name="Others"  value="others">
       <label for="indoor-games">Others</label>
       <textarea name="Other_skills" id="other-skills" cols="30" rows="10"></textarea>
     </div>
