--- a/demo.html
+++ b/demo.html
@@ -2,28 +2,129 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
- <meta name="viewport" content="width=
- , initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <title>Demo</title>
  <link rel="stylesheet" href="demo.css">
-  <!-- jQuery -->
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-  
-  <!-- Fotorama -->
-  <link href="/Assets/plugin/fotorama-4.6.2/fotorama.css" rel="stylesheet">
-  <script src="/Assets/plugin/fotorama-4.6.2/fotorama.js"></script>
-
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
 <!-- Fotorama -->
-<div class="fotorama" data-width="700" data-ratio="700/467" data-max-width="100%">
-  <img src="/Assets/img/Alumni/photo-6.jpeg">
-  <img src="/Assets/img/Alumni/photo-5.jpeg">
-  <img src="/Assets/img/Alumni/photo-4.jpeg">
-  <img src="/Assets/img/Alumni/photo-3.jpeg">
-  <img src="/Assets/img/Alumni/photo-2.jpeg">
-</div>
+<label for="name">Enter Name</label>
+<input type="text" id="name">
+
+<label for="regno">Enter Reg No</label>
+<input type="text" id="regno">
+
+<label for="year">Enter Year</label>
+<input type="text" id="year">
+
+<label for="degree">Enter Degree</label>
+<input type="text" id="degree">
+
+<label for="course">Enter Course</label>
+<input type="text" id="course">
+
+<label for="skill">Enter skill</label>
+<input type="text"  id="skills">
+
+
+<button onclick="search()">Search</button>
+
+
 </body>
+<script>
+  // manually storing records
+  let users = [
+    {
+      name: "sambath",
+      regno: "4265507",
+      email: "sachinmugu@gmail.com",
+      password: "67867",
+      year: "2005",
+      degree: "BE",
+      course: "CS74268574257642765767E"
+    },
+    {
+      name: "kumar",
+      regno: "4265508",
+      email: "sachi@gmail.com",
+      password: "243536",
+      year: "2006",
+      degree: "BE",
+      course: "CSE"
+    },
+    {
+      name: "prem",
+      regno: "4265509",
+      email: "mugu@gmail.com",
+      password: "prem456",
+      year: "2006",
+      degree: "BE",
+      course: "EEE"
+    },
+    {
+      name: "mani",
+      regno: "4265510",
+      email: "mani@gmail.com",
+      password: "mani333",
+      year: "2005",
+      degree: "BE",
+      course: "IT"
+    },
+    {
+      name: "raju",
+      regno: "4265511",
+      email: "raju@gmail.com",
+      password: "sk",
+      year: "2004",
+      degree: "BE",
+      course: "ECE"
+    },
+    {
+      name: "sambath",
+      regno: "4265512",
+      email: "sachinmugu@gmail.com",
+      password: "67867",
+      year: "2005",
+      degree: "BE",
+      course: "ECE"
+    }
+  ];
+
+
+  function search() {
+    console.log("Calling");
+
+    let filter1 = {
+      name: document.getElementById("name").value,
+      regno: document.getElementById("regno").value,
+      year: document.getElementById("year").value,
+      degree: document.getElementById("degree").value,
+      course: document.getElementById("course").value,
+      skills: document.getElementById("skills").value
+    };
+
+    //Restoring filter
+    let filter = {};
+    for (let key in filter1) {
+      if (filter1[key] != "") filter[key] = filter1[key];
+    }
+
+    // Filtering records based on filters
+
+    users = users.filter(function (item) {
+      for (var key in filter) {
+        console.log();
+        if (item[key] === undefined || item[key] != filter[key]) {
+          return false;
+        }
+      }
+      return true;
+    });
+
+    // Displaying records with filter conditions
+    if (users.length == 0) console.log("no results found");
+    else console.log(users);
+  }
+
+</script>
 </html>
